--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ND940C3-Project</string>
+    <string name="app_name">LoadApp</string>
     <string name="app_description">Download files from Internet</string>
     <string name="action_settings">Settings</string>
 
@@ -11,4 +11,10 @@
     <string name="button_name">Click me</string>
     <string name="button_loading">We are loading </string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
+    <string name="udacity_text">LoadApp - Current repository by Udacity</string>
+    <string name="glide_text">Glide - Image Loading Library by BumpTech</string>
+    <string name="download_string">Download</string>
+    <string name="choose_message">Please select one of the options above to start the download.</string>
+    <string name="we_are_loading">We are loading</string>
 </resources>
