--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="action_settings">Settings</string>
 
 
-    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
+    <string name="notification_title">LoadApp</string>
     <string name="notification_description">The Project 3 repository is downloaded</string>
     <string name="notification_button">See changes</string>
 
@@ -17,4 +17,7 @@
     <string name="download_string">Download</string>
     <string name="choose_message">Please select one of the options above to start the download.</string>
     <string name="we_are_loading">We are loading</string>
+    <string name="load_app_channel_id">load_app_channel</string>
+    <string name="load_app_channel_name">Resource Download</string>
+    <string name="load_app_channel_message">Resource download completed</string>
 </resources>
